package com.zipcodewilmington.froilansfarm;

public interface Aircraft extends Vehicle{

    public void fly();

}
