package com.zipcodewilmington.froilansfarm;

public interface Botanist {

    public void plantCrop();

}
