package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.Animal;
import com.zipcodewilmington.froilansfarm.Produce;
import com.zipcodewilmington.froilansfarm.edible.Edible;

public class Chicken extends Animal implements Produce {
    public void eat(Edible edible) {

    }

    public String makeNoise() {
        return null;
    }

    public void yield(Edible edible) {

    }
}
