package com.zipcodewilmington.froilansfarm;

import java.util.ArrayList;
import java.util.List;

public class ChickenCoop {
    List<Chicken> chickens = new ArrayList<Chicken>();
}
