package com.zipcodewilmington.froilansfarm;

public class CropDuster {

    public void fertilize(Crop crop) {}
}
