package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.edible.Person;

import java.util.ArrayList;
import java.util.List;

public class FarmHouse {

    List<Person> occupants = new ArrayList<Person>();
}
