package com.zipcodewilmington.froilansfarm;

public abstract class FarmVehicle {

    public void operate(){};
}
