package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.Animal;
import com.zipcodewilmington.froilansfarm.Rideable;
import com.zipcodewilmington.froilansfarm.edible.Edible;

public class Horse extends Animal implements Rideable {
    public void eat(Edible edible) {

    }

    public String makeNoise() {
        return null;
    }
}
