package com.zipcodewilmington.froilansfarm;

public interface NoiseMaker {

    public String makeNoise();

}
