package com.zipcodewilmington.froilansfarm;

import java.util.ArrayList;
import java.util.List;

public class Stable {

    List<Horse> horses = new ArrayList<Horse>();
}
