package com.zipcodewilmington.froilansfarm;

public class Tractor {

    public void harvest(Crop crop) {}
}
