package com.zipcodewilmington.froilansfarm;

public interface Vehicle extends Rideable {
}
