package com.zipcodewilmington.froilansfarm.edible;

import com.zipcodewilmington.froilansfarm.Eater;
import com.zipcodewilmington.froilansfarm.NoiseMaker;

public abstract class Animal implements NoiseMaker, Eater {
}
