package com.zipcodewilmington.froilansfarm.edible;

import com.zipcodewilmington.froilansfarm.Produce;

public abstract class Crop extends Field implements Produce {
}
