package com.zipcodewilmington.froilansfarm.edible;

public class EarCorn extends Vegetable {
}
