package com.zipcodewilmington.froilansfarm.edible;

public interface Edible {

    //this and the foods can be in a package of their own,
    //since they're the only set of arrows not touching anything else.

}
