package com.zipcodewilmington.froilansfarm.edible;

public class Egg implements Edible {

}
