package com.zipcodewilmington.froilansfarm.edible;

import com.zipcodewilmington.froilansfarm.Eater;
import com.zipcodewilmington.froilansfarm.NoiseMaker;

public abstract class Person implements NoiseMaker, Eater {
}
