package com.zipcodewilmington.froilansfarm.edible;

public class Tomato extends Vegetable {

}
