package com.zipcodewilmington.froilansfarm.edible;

public abstract class Vegetable implements Edible {

}
