package com.zipcodewilmington.froilansfarm.humans;

public interface Pilot {
}
